--- a/demo_inid_model.ipynb
+++ b/demo_inid_model.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -48,19 +48,19 @@
       "text/html": [
        "<div class=\"highlight\"><pre style=\"line-height:1!important;\">error:\n",
        "  ┌───┐   ┌───┐   ┌───┐      \n",
-       "  ·───·───·───<span style=\"color:blue; font-weight:bold\">Z</span>───<span style=\"color:blue; font-weight:bold\">Z</span>───·───·─┐\n",
+       "  ·───<span style=\"color:blue; font-weight:bold\">Z</span>───·───·───<span style=\"color:blue; font-weight:bold\">Z</span>───·───·─┐\n",
        "  │░░░│   │░░░│   │░░░│   │░│\n",
-       "┌─·───<span style=\"color:magenta; font-weight:bold\">Y</span>───<span style=\"color:blue; font-weight:bold\">Z</span>───·───·───·───·─┘\n",
+       "┌─·───<span style=\"color:red; font-weight:bold\">X</span>───·───·───·───<span style=\"color:magenta; font-weight:bold\">Y</span>───·─┘\n",
        "│░│   │░░░│   │░░░│   │░░░│  \n",
-       "└─·───·───·───·───<span style=\"color:blue; font-weight:bold\">Z</span>───·───·─┐\n",
+       "└─<span style=\"color:blue; font-weight:bold\">Z</span>───·───·───·───·───·───·─┐\n",
        "  │░░░│   │░░░│   │░░░│   │░│\n",
-       "┌─·───·───·───·───·───·───·─┘\n",
+       "┌─<span style=\"color:blue; font-weight:bold\">Z</span>───·───<span style=\"color:red; font-weight:bold\">X</span>───·───<span style=\"color:blue; font-weight:bold\">Z</span>───·───·─┘\n",
        "│░│   │░░░│   │░░░│   │░░░│  \n",
-       "└─·───·───·───·───·───·───<span style=\"color:blue; font-weight:bold\">Z</span>─┐\n",
+       "└─·───<span style=\"color:magenta; font-weight:bold\">Y</span>───<span style=\"color:blue; font-weight:bold\">Z</span>───·───·───·───·─┐\n",
        "  │░░░│   │░░░│   │░░░│   │░│\n",
-       "┌─·───·───·───·───·───·───·─┘\n",
+       "┌─·───·───·───<span style=\"color:red; font-weight:bold\">X</span>───·───·───·─┘\n",
        "│░│   │░░░│   │░░░│   │░░░│  \n",
-       "└─·───·───·───<span style=\"color:magenta; font-weight:bold\">Y</span>───·───·───<span style=\"color:magenta; font-weight:bold\">Y</span>  \n",
+       "└─·───·───·───·───<span style=\"color:blue; font-weight:bold\">Z</span>───·───<span style=\"color:magenta; font-weight:bold\">Y</span>  \n",
        "      └───┘   └───┘   └───┘  </pre></div>"
       ],
       "text/plain": [
